- Fix wxCheckBox::SetValue() when in undetermined state (#24074).
- Fix for incorrect preferred size from empty wxChoice with GTK3 (#23382).
- wxDropSource::GiveFeedback() fixes (#24051).
- Fix wxCheckBox undetermined state showing as checked with some themes (#24074).
- Fix crash with GTK3 if console program is using a GUI wxApp class (#24081).
- Generic wxDataViewCtrl drag hint fixes (#24084).

wxMSW:

- Add support for line spacing and bullet style attributes to wxTextCtrl
  (Blake-Madden, #24046, #24069).
- Fix restoring hidden top level windows (Christian Walther, #24117).
- Add support for VT_UI8 OLE VARIANT type (Miguel Gimenez, #24115).

wxOSX:

- Fix clipping when using Sonoma/Xcode 15 SDK (#23916, #24054, #24067, #24073).
- Restore activation for non-bundled applications (#24056, #24062).


3.2.4: (released 2023-11-11)
----------------------------

All:

- Allow creating wxArrays from std::initializer_list (Lotendan, #23966).
- Fix regression in wxTranslations::AddCatalog() return value (#24019).

All (GUI):

- Fix possible crash when dragging pages in wxAuiNotebook (#24027).
- Fix refreshing multiple selection items in generic wxListCtrl.

wxGTK:

- Fix some regressions introduced in 3.2.3:
  * Don't crash in console apps linked with GUI libraries (#23981).
  * Fix possible crash and too high CPU use when using EGL (#24018).
  * Fix losing clipboard contents when clearing a different selection (#23988).

wxMSW:

- Fix MSVS warning about redundant "const" in wx/itemid.h (#23590).
- Fix spurious memory leak reports when using static CRT.

wxOSX:

- Fix showing windows for background apps under macOS Sonoma (#23893).


3.2.3: (released 2023-10-10)
----------------------------

All:

- Fix wxTranslations::AddStdCatalog() and add AddAvailableCatalog() (#18227).
- Add move ctor and assignment operator to wxString (Pavel Tyunin, #23224).
- Enable large file support in Unix CMake builds (Maarten Bent, #22750).