@@ -273,6 +273,7 @@ wxGTK:
 - Fix wxCheckBox undetermined state showing as checked with some themes (#24074).
 - Fix crash with GTK3 if console program is using a GUI wxApp class (#24081).
 - Generic wxDataViewCtrl drag hint fixes (#24084).
+- Ensure wxListBox best size is at least the minimum required by GTK3.
 
 wxMSW:
 
